Startup Analysis Commit

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -5538,38 +5538,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>startup</th>\n",
+       "      <th>vertical</th>\n",
+       "      <th>subvertical</th>\n",
+       "      <th>city</th>\n",
+       "      <th>investors</th>\n",
+       "      <th>round</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sr No</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-09-01</td>\n",
+       "      <td>BYJU’S</td>\n",
+       "      <td>E-Tech</td>\n",
+       "      <td>E-learning</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Tiger Global Management</td>\n",
+       "      <td>Private Equity Round</td>\n",
+       "      <td>1700.00000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-09-01</td>\n",
+       "      <td>Mamaearth</td>\n",
+       "      <td>E-commerce</td>\n",
+       "      <td>Retailer of baby and toddler products</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Sequoia Capital India</td>\n",
+       "      <td>Series B</td>\n",
+       "      <td>156.05031</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-02-01</td>\n",
+       "      <td>https://www.wealthbucket.in/</td>\n",
+       "      <td>FinTech</td>\n",
+       "      <td>Online Investment</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>Vinod Khatumal</td>\n",
+       "      <td>Pre-series A</td>\n",
+       "      <td>25.50000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-02-01</td>\n",
+       "      <td>Fashor</td>\n",
+       "      <td>Fashion and Apparel</td>\n",
+       "      <td>Embroiled Clothes For Women</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Sprout Venture Partners</td>\n",
+       "      <td>Seed Round</td>\n",
+       "      <td>15.30000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>Zomato</td>\n",
+       "      <td>Hospitality</td>\n",
+       "      <td>Online Food Delivery Platform</td>\n",
+       "      <td>Gurgaon</td>\n",
+       "      <td>Ant Financial</td>\n",
+       "      <td>Private Equity Round</td>\n",
+       "      <td>1275.00000</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2825</th>\n",
+       "      <td>2015-09-04</td>\n",
+       "      <td>Urban Ladder</td>\n",
+       "      <td>Online Furnishing\\\\nE-Commerce</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Sequoia Capital, TR Capital, Steadview Capital...</td>\n",
+       "      <td>Private Equity</td>\n",
+       "      <td>425.00000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2826</th>\n",
+       "      <td>2015-09-04</td>\n",
+       "      <td>Purple Squirrel</td>\n",
+       "      <td>Ed-Tech</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Matrix Partners India, India Quotient</td>\n",
+       "      <td>Private Equity</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2827</th>\n",
+       "      <td>2015-10-04</td>\n",
+       "      <td>Whatfix</td>\n",
+       "      <td>Interactive\\\\xc2\\\\xa0 How-To Guides</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Helion Venture Partner, Powerhouse Ventures, G...</td>\n",
+       "      <td>Seed Funding</td>\n",
+       "      <td>7.65000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2828</th>\n",
+       "      <td>2015-10-04</td>\n",
+       "      <td>iMMi Life</td>\n",
+       "      <td>Mobile Health Tech</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chennai</td>\n",
+       "      <td>Unitus Seed Fund</td>\n",
+       "      <td>Seed Funding</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2829</th>\n",
+       "      <td>2015-11-04</td>\n",
+       "      <td>Zomato</td>\n",
+       "      <td>Restaurant Reviews</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gurgaon</td>\n",
+       "      <td>Info Edge (India)</td>\n",
+       "      <td>Private Equity</td>\n",
+       "      <td>212.50000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1215 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date                       startup  \\\n",
+       "Sr No                                            \n",
+       "1     2020-09-01                        BYJU’S   \n",
+       "3     2020-09-01                     Mamaearth   \n",
+       "4     2020-02-01  https://www.wealthbucket.in/   \n",
+       "5     2020-02-01                        Fashor   \n",
+       "7     2020-10-01                        Zomato   \n",
+       "...          ...                           ...   \n",
+       "2825  2015-09-04                  Urban Ladder   \n",
+       "2826  2015-09-04               Purple Squirrel   \n",
+       "2827  2015-10-04                       Whatfix   \n",
+       "2828  2015-10-04                     iMMi Life   \n",
+       "2829  2015-11-04                        Zomato   \n",
+       "\n",
+       "                                  vertical  \\\n",
+       "Sr No                                        \n",
+       "1                                   E-Tech   \n",
+       "3                               E-commerce   \n",
+       "4                                  FinTech   \n",
+       "5                      Fashion and Apparel   \n",
+       "7                              Hospitality   \n",
+       "...                                    ...   \n",
+       "2825        Online Furnishing\\\\nE-Commerce   \n",
+       "2826                               Ed-Tech   \n",
+       "2827   Interactive\\\\xc2\\\\xa0 How-To Guides   \n",
+       "2828                    Mobile Health Tech   \n",
+       "2829                    Restaurant Reviews   \n",
+       "\n",
+       "                                 subvertical       city  \\\n",
+       "Sr No                                                     \n",
+       "1                                 E-learning  Bangalore   \n",
+       "3      Retailer of baby and toddler products  Bangalore   \n",
+       "4                          Online Investment  New Delhi   \n",
+       "5                Embroiled Clothes For Women     Mumbai   \n",
+       "7              Online Food Delivery Platform    Gurgaon   \n",
+       "...                                      ...        ...   \n",
+       "2825                                     NaN  Bangalore   \n",
+       "2826                                     NaN     Mumbai   \n",
+       "2827                                     NaN  Bangalore   \n",
+       "2828                                     NaN    Chennai   \n",
+       "2829                                     NaN    Gurgaon   \n",
+       "\n",
+       "                                               investors  \\\n",
+       "Sr No                                                      \n",
+       "1                                Tiger Global Management   \n",
+       "3                                  Sequoia Capital India   \n",
+       "4                                         Vinod Khatumal   \n",
+       "5                                Sprout Venture Partners   \n",
+       "7                                          Ant Financial   \n",
+       "...                                                  ...   \n",
+       "2825   Sequoia Capital, TR Capital, Steadview Capital...   \n",
+       "2826               Matrix Partners India, India Quotient   \n",
+       "2827   Helion Venture Partner, Powerhouse Ventures, G...   \n",
+       "2828                                    Unitus Seed Fund   \n",
+       "2829                                   Info Edge (India)   \n",
+       "\n",
+       "                      round      amount  year  month  \n",
+       "Sr No                                                 \n",
+       "1      Private Equity Round  1700.00000  2020      9  \n",
+       "3                  Series B   156.05031  2020      9  \n",
+       "4              Pre-series A    25.50000  2020      2  \n",
+       "5                Seed Round    15.30000  2020      2  \n",
+       "7      Private Equity Round  1275.00000  2020     10  \n",
+       "...                     ...         ...   ...    ...  \n",
+       "2825         Private Equity   425.00000  2015      9  \n",
+       "2826         Private Equity     0.00000  2015      9  \n",
+       "2827           Seed Funding     7.65000  2015     10  \n",
+       "2828           Seed Funding     0.00000  2015     10  \n",
+       "2829         Private Equity   212.50000  2015     11  \n",
+       "\n",
+       "[1215 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "startup\n",
+       "\"BYJU\\\\'S\"                                [Qatar Investment Authority]\n",
+       "19th mile            [Rishi Vasudev, Excelsior Investments, Ritesh ...\n",
+       "1Crowd                                              [Ganesh Natarajan]\n",
+       "33Coupons                                              [Not Disclosed]\n",
+       "360Ride                                                  [Undisclosed]\n",
+       "                                           ...                        \n",
+       "quizizz              [Nexus Venture Partners, Prime Venture Partner...\n",
+       "vImmune                                         [Undisclosed investor]\n",
+       "vPhrase Analytics          [Apoorv Ranjan Sharma, Daud Ali and others]\n",
+       "wayForward           [Harsh Mahajan, Farhan Naqvi, Sreepathy Viswan...\n",
+       "zippserv                                       [Info Edge (India) Ltd]\n",
+       "Name: investors, Length: 1093, dtype: object"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list of founder\n",
+    "df.groupby('startup')['investors'].unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 368,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sr No\n",
+       "175    Bangalore\n",
+       "Name: city, dtype: object"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#location\n",
+    "df[df['startup'].str.contains('quizizz')]['city']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 369,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Ed-Tech'], dtype=object)"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Industry\n",
+    "df[df['startup'].str.contains('quizizz')]['vertical'].unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 370,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Seed/ Angel Funding'], dtype=object)"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Stage\n",
+    "df[df['startup'].str.contains('quizizz')]['round'].unique()"
+   ]
   }
  ],
  "metadata": {
